# novel-ai-module-tools

./: 2_match_count.py  4_find_and_replace.py  5_construct_graphs.py  README.md  config.py  contentConfig.json.example  pyproject.toml  requirements.txt  resources_loader.py  split_file.py
.github/workflows/: ci.yml
novel_ai_module_tools/: 4_find_and_replace.py  config.py  construct_graphs.py  find_and_replace.py  formatter.py  logger_config.py  ner.py  pick_and_choose.py  resources_loader.py  split_and_ner.py  split_file.py
novel_ai_module_tools/resources/names/replace/: M.txt
resources/names/recognize/: S.txt
resources/names/replace/: F.txt
src/: 1_formatter.py  2_pick_and_choose.py  3_split_and_ner.py  4_find_and_replace.py  5_construct_graphs.py  ner.py  resources_loader.py  split_file.py  write_out.txt
src/resources/names/: ignore_names.txt  surnames_ending_s.txt  surnames_ending_x.txt
tests/: test_construct_graphs.py  test_find_and_replace.py  test_formatter.py  test_ner.py  test_pick_and_choose.py  test_resources_loader.py  test_split_and_ner.py  test_split_file.py
