[tool.poetry]
name = "novel-ai-module-tools"
version = "0.1.0"
description = ""
authors = ["Jason Robison <jrrobison@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
pyqt5 = "^5.15.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
