[tool.poetry]
name = "novel-ai-module-tools"
version = "0.1.0"
description = ""
authors = ["Jason Robison <jrrobison@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
pyqt5 = "^5.15.10"
spacy = "^3.7.4"
coloredlogs = "^15.0.1"
#spacy-en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl", optional = true }

[tool.poetry.extras]
#spacy_en_core_web_sm = ["spacy-en-core-web-sm"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
